--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 # Jetbrain Files
 .idea/
+
+node_modules/
+/.pnp
+.pnp.js
+
+/build
+/dist
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.eslintcache
+
+.npm
+
+.DS_Store
+Thumbs.db
